- Added support for bonus nodes that add RES- and/or DEP-specific Essence modifiers in the same vein as the existing MAG-specific Essence modifiers.
- Added support for bonus nodes that modify the amount of special attributes burned from Essence loss: specialattburnmultiplier and specialatttotalburnmultiplier. The former stacks additively, the latter stacks multiplicatively.

Data Changes:
- Added bonus nodes for Shooter (The Soldier) paragon's Compiling dice pool penalty and +1 limit for attack actions. Fixes #4935.
- Corrected the Cybercombat dice bonus of Intrusion Countermeasure (The Guardian) to be conditional because it is not granted against IC.
- Added bonus nodes for Architect (The Builder) and Archivist (The Secret Keeper) paragons' dice bonuses for the Edit File and Matrix Search Computer actions respectively.
- Modified Cyberlimb Optimization so that if the selected skill for it is a skill that can be used with weapons, the +1 limit modifier will show up as part of those weapons' accuracy. Existing characters with this 'ware will need to either re-buy it or reapply improvements to see the effects. Part of #4841.
- Astral Chameleon can now properly only be taken by Awakened characters. Existing characters with this quality will need to re-add the quality or reapply improvements to see this effect.
- Technomancers now have their inherent +2 to Matrix Perception reflected in the program. Existing technomancers will need to reapply improvements to see this bonus.
- City Slicker, Outdoorsman, Dimmer Bulb, Reduced Sense, Vomeronasal Organ, Critter Spook, Cyclopean Eye, Malware Infection, Sprite Combustion, and Hi-Rez now all have their dice pool effects reflected in the program.Existing characters with these qualities will need to re-add the quality or reapply improvements to see these bonuses.