@@ -10,6 +10,7 @@ Application Changes:
 - The karma cost of learning new spells is no longer much higher than it should be.
 - Added support for bonus nodes that add RES- and/or DEP-specific Essence modifiers in the same vein as the existing MAG-specific Essence modifiers.
 - Added support for bonus nodes that modify the amount of special attributes burned from Essence loss: specialattburnmultiplier and specialatttotalburnmultiplier. The former stacks additively, the latter stacks multiplicatively.
+- Buying knowledge skill specializations with knowledge skill points in Point Buy- and Life Modules-based character creation methods no longer also costs karma.
 
 Data Changes:
 - Added bonus nodes for Shooter (The Soldier) paragon's Compiling dice pool penalty and +1 limit for attack actions. Fixes #4935.
